tests/experimental/error/dangling_call_in_ghost_const.lus

node N(in:bool) returns (out:bool);
(*@contract
  var A : bool = Undefined(cancel);
*)
let
  in = out;
tel
